hphp/test/zend/good/Zend/tests/037.php.expectf
int(1)

Fatal error: Invalid static property access: Closure::x in %s/037.php on line 10
